# train_lib

./: README.md  noxfile.py  pyproject.toml  setup.cfg
src/train_lib/: infer.py  train.py  validation.py
