[metadata]
name = train-tools-lib
version = file: VERSION
author = Pauline Delporte
author_email = pauline.delporte@csgroup.eu
description = Training tools library.
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where=src

[flake8]
max-line-length = 120

